--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Weather App</title>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body></body>
+  <script src="index.js"></script>
 </html>
