Update index.html with city name, temperature, fake rain/humidity/wind and fake weather forecast for next 6 days

--- a/index.html
+++ b/index.html
@@ -52,6 +52,109 @@
             </div>
           </div>
         </form>
+
+        <h2 id="city-name">
+          Lisbon
+        </h2>
+
+        <h3 id="current-date-time"></h3>
+        <h1>☀️</h1>
+        <div class="row">
+          <div class="col-8">
+            <span id="temperature"></span
+            ><small>
+              <a href="#" id="celsius">ºC</a> |
+              <a href="#" id="fahrenheit">ºF</a></small
+            >
+          </div>
+          <div class="col-4">
+            <div class="row">
+              💧 0%
+            </div>
+            <div class="row">
+              💦 77%
+            </div>
+            <div class="row">
+              💨 20km/h
+            </div>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2">
+            Tue
+          </div>
+          <div class="col-2">
+            Wed
+          </div>
+          <div class="col-2">
+            Thu
+          </div>
+          <div class="col-2">
+            Fri
+          </div>
+          <div class="col-2">
+            Sat
+          </div>
+          <div class="col-2">
+            Sun
+          </div>
+          <div class="col-2">
+            08/10
+          </div>
+          <div class="col-2">
+            09/10
+          </div>
+          <div class="col-2">
+            10/10
+          </div>
+          <div class="col-2">
+            11/10
+          </div>
+          <div class="col-2">
+            12/10
+          </div>
+          <div class="col-2">
+            13/10
+          </div>
+          <div class="col-2">
+            ☀️
+          </div>
+          <div class="col-2">
+            ☀️
+          </div>
+          <div class="col-2">
+            🌤️
+          </div>
+          <div class="col-2">
+            ⛅
+          </div>
+          <div class="col-2">
+            ⛈️
+          </div>
+          <div class="col-2">
+            🌦️
+          </div>
+          <div class="col-2">
+            27ºC
+          </div>
+          <div class="col-2">
+            26ºC
+          </div>
+          <div class="col-2">
+            24ºC
+          </div>
+          <div class="col-2">
+            22ºC
+          </div>
+          <div class="col-2">
+            19ºC
+          </div>
+          <div class="col-2">
+            21ºC
+          </div>
+        </div>
       </div>
     </div>
   </body>
