Add link to Git repository

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
         </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/Yuneza/My_weather_app">Open-source code</a>",
+      by Yuneza Latif"</small
+    >
   </body>
   <script src="index.js"></script>
 </html>
