--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             21ºC
           </div>
         </div>
+        <small>
+          <a href="https://github.com/Yuneza/My_weather_app">Open-source code</a
+          >, by Yuneza Latif</small
+        >
       </div>
     </div>
-    <small>
-      <a href="https://github.com/Yuneza/My_weather_app">Open-source code</a>",
-      by Yuneza Latif"</small
-    >
   </body>
   <script src="index.js"></script>
 </html>
